--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,31 @@
-HELP.md
+# Ignore Gradle project-specific cache directory
 .gradle
-build/
-!gradle/wrapper/gradle-wrapper.jar
-!**/src/main/**
-!**/src/test/**
 
-### STS ###
-.apt_generated
-.classpath
-.factorypath
+# Directories #
+/build/
+/bin/
+/target/
+ 
+# OS Files #
+.DS_Store
+  
+*.class
+ 
+# Package Files #
+*.jar
+*.war
+*.ear
+*.db
+      
+# Eclipse #
 .project
-.settings
-.springBeans
-.sts4-cache
-
-### IntelliJ IDEA ###
-.idea
-*.iws
-*.iml
-*.ipr
-out/
-
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-
-### VS Code ###
-.vscode/
+.metadata
+.classpath
+.settings/
+.loadpath
+ 
+bin/**
+tmp/**
+tmp/**/*
+*.tmp
+*.bak
