--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,10 +5,9 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=st
 spring.datasource.password=
 
-hibernate.dialect=org.hibernate.dialect.H2Dialect
-hibernate.hbm2ddl.auto=create
 spring.jpa.open-in-view = true
 spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
 
 #logging
 logging.level.styleshare.task=info
